more changes to improve the accessibility

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <title>AreoStep | Ecommerce </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
  <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
 </head>
@@ -27,9 +29,9 @@
     </ul>
 
     <div class="nav-icon">
-      <a href="sign-in.html"><i class='bx  bx-user'  ></i></a>
-      <a id="cart-icon"><i class='bx  bx-cart'></i></a> 
-      <div class="bx bx-menu" id="menu-icon"></div>
+      <a href="sign-in.html"><i class='bx  bx-user' aria-label="sign-in"></i></a>
+      <a id="cart-icon"><i class='bx  bx-cart' aria-label="Open cart"></i></a> 
+      <div class="bx bx-menu" id="menu-icon" aria-label="Open menu"></div>
       
     </div>
 
@@ -66,7 +68,7 @@
     </div>
     <div class="products">
 
-        <div class="product-item" onclick="window.location.href='sproduct.html?id=nike-shox-z';"> 
+        <div class="product-item" role="button" onclick="window.location.href='sproduct.html?id=nike-shox-z';"> 
             <div class="row">
                 <img src="images/Nike shoes/W+NIKE+SHOX+Z-1.png" alt="Maroon nike-shox-z women's shoe"> 
                 <h6 class="category-tag">Women's shoes</h6>
@@ -88,7 +90,7 @@
               <p>£74.99</p>
             </div>
         </div>
-        <div class="product-item"  onclick="window.location.href='sproduct.html?id=xlg-mtw-shoes';"> 
+        <div class="product-item" role="button" onclick="window.location.href='sproduct.html?id=xlg-mtw-shoes';"> 
             <div class="row">
                 <img src="images/Addidas shoes/XLG_MTW_Shoes_Grey_JS1501_01_00_standard.jpg" alt="grey xlg mtw Addidas unisex shoe"> 
                 <h6 class="category-tag">unisex shoes</h6>
@@ -110,7 +112,7 @@
               <p>£130.00</p>
             </div>
         </div> 
-        <div class="product-item"  onclick="window.location.href='sproduct.html?id=anthony-edwards-1';"> 
+        <div class="product-item" role="button" onclick="window.location.href='sproduct.html?id=anthony-edwards-1';"> 
             <div class="row">
                 <img src="images/Addidas shoes/Anthony_Edwards_1_Low_Trainers_White_JQ6140_01_00_standard.jpg" alt="black and white anthony-edwards-1 x Addidas Basketball shoe"> 
                 <h6 class="category-tag">Basketball shoes</h6>
@@ -132,7 +134,7 @@
               <p>£74.99</p>
             </div>
         </div> 
-        <div class="product-item"  onclick="window.location.href='sproduct.html?id=nike-jordan-1';"> 
+        <div class="product-item" role="button" onclick="window.location.href='sproduct.html?id=nike-jordan-1';"> 
             <div class="row">
                 <img src="images/Nike shoes/nike retro high Jordan .png" alt="blue nike air Jordan kid's shoe"> 
                 <h6 class="category-tag">kids's shoes</h6>
@@ -162,7 +164,7 @@
       <h2>Best Sellers</h2>
     </div>
     <div class="products">
-        <div class="product-item"  onclick="window.location.href='sproduct.html?id=deviate-nitro';"> 
+        <div class="product-item" role="button" onclick="window.location.href='sproduct.html?id=deviate-nitro';"> 
             <div class="row">
                 <img src="images/Puma shoes/Deviate-NITRO™-Elite-3-Running-Shoes-Women.jpg" alt="bright orange deviate-nitro puma running shoe"> 
                 <h6 class="category-tag">Running shoes</h6>
@@ -184,7 +186,7 @@
               <p>£195.99</p>
             </div>
         </div>
-        <div class="product-item"  onclick="window.location.href='sproduct.html?id=campus-00s';"> 
+        <div class="product-item" role="button" onclick="window.location.href='sproduct.html?id=campus-00s';"> 
             <div class="row">
                 <img src="images/Addidas shoes/Campus_00s_Shoes_Green_H03472_01_standard.jpg" alt="dark green Addidas campus-00s unisex shoe"> 
                 <h6 class="category-tag">unisex shoes</h6>
@@ -206,7 +208,7 @@
               <p>£90.00</p>
             </div>
         </div> 
-        <div class="product-item"  onclick="window.location.href='sproduct.html?id=vomero-premium';"> 
+        <div class="product-item" role="button" onclick="window.location.href='sproduct.html?id=vomero-premium';"> 
             <div class="row">
                 <img src="images/Nike shoes/NIKE+VOMERO+PREMIUM.png" alt="light green nike vomero-premium unisex shoe"> 
                 <h6 class="category-tag">unisex shoes</h6>
@@ -228,7 +230,7 @@
               <p>£210.00</p>
             </div>
         </div> 
-        <div class="product-item"  onclick="window.location.href='sproduct.html?id=palermo-sneakers';"> 
+        <div class="product-item" role="button" onclick="window.location.href='sproduct.html?id=palermo-sneakers';"> 
             <div class="row">
                 <img src="images/Puma shoes/Palermo-Sneakers-Unisex.jpg" alt="light yellow and blue puma palermo-sneakers unisex"> 
                 <h6 class="category-tag">unisex shoes</h6>
