--- a/sign-in.html
+++ b/sign-in.html
@@ -5,15 +5,15 @@
     <title>AreoStep | sign-in </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
  <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
 </head>
 <body>
@@ -28,9 +28,9 @@
     </ul>
 
     <div class="nav-icon">
-      <a href="sign-in.html"><i class='bx  bx-user'  ></i></a>
-      <a id="cart-icon"><i class='bx  bx-cart'></i></a> 
-      <div class="bx bx-menu" id="menu-icon"></div>
+      <a href="sign-in.html"><i class='bx  bx-user' aria-label="sign-in"></i></a>
+      <a id="cart-icon"><i class='bx  bx-cart' aria-label="Open cart"></i></a> 
+      <div class="bx bx-menu" id="menu-icon" aria-label="Open menu"></div>
       
     </div>
 
