--- a/sproduct.html
+++ b/sproduct.html
@@ -4,15 +4,15 @@
     <title>AreoStep | product page </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
  <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
 </head>
 <body>
@@ -27,9 +27,9 @@
     </ul>
 
     <div class="nav-icon">
-      <a href="sign-in.html"><i class='bx  bx-user'  ></i></a>
-      <a id="cart-icon"><i class='bx  bx-cart'  ></i></a>
-      <div class="bx bx-menu" id="menu-icon"></div>
+      <a href="sign-in.html"><i class='bx  bx-user' aria-label="sign-in"></i></a>
+      <a id="cart-icon"><i class='bx  bx-cart' aria-label="Open cart" ></i></a>
+      <div class="bx bx-menu" id="menu-icon" aria-label="Open menu"></div>
     </div>
 
 
@@ -98,7 +98,7 @@
     </div>
     <div class="products">
 
-      <div class="product-item"  onclick="window.location.href='sproduct2.html?id=league-jb-fold';"> 
+      <div class="product-item" role="button" onclick="window.location.href='sproduct2.html?id=league-jb-fold';"> 
         <div class="row">
             <img src="images/Addidas shoes/Untitled design.png" alt="black and blue Addidas league-jb-fold kid's football shoes"> 
             <h6 class="category-tag">kid's football shoes</h6>
@@ -120,7 +120,7 @@
           <p>£65.00</p>
         </div>
     </div>
-    <div class="product-item"  onclick="window.location.href='sproduct2.html?id=fenty-puma-avanti';"> 
+    <div class="product-item" role="button" onclick="window.location.href='sproduct2.html?id=fenty-puma-avanti';"> 
         <div class="row">
             <img src="images/Puma shoes/Untitled design.png" alt="silver and blue Fenty x PUMA Avanti LS-X women's Sneakers"> 
             <h6 class="category-tag">women's shoes</h6>
@@ -142,7 +142,7 @@
           <p>£100.00</p>
         </div>
     </div> 
-    <div class="product-item"  onclick="window.location.href='sproduct2.html?id=air-max-muse';"> 
+    <div class="product-item" role="button" onclick="window.location.href='sproduct2.html?id=air-max-muse';"> 
         <div class="row">
             <img src="images/Nike shoes/Untitled design 8.47.57 PM.png" alt="pink and red Nike Air Max Muse x ballerina shoes"> 
             <h6 class="category-tag">Women's shoes</h6>
@@ -164,7 +164,7 @@
           <p>£184.99</p>
         </div>
     </div> 
-    <div class="product-item"  onclick="window.location.href='sproduct2.html?id=uk-allerdale';"> 
+    <div class="product-item" role="button" onclick="window.location.href='sproduct2.html?id=uk-allerdale';"> 
         <div class="row">
             <img src="images/New Balence/Untitled design.png" alt="brown new Balence uk-allerdale men's shoe"> 
             <h6 class="category-tag">Men's shoes</h6>
