changes made to fix console issue

--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
   <section class="by-brand">
     <div class="brands">
       <h3>Shop By Brand</h3>
-      <img src="images/nike-shoes-logo-png-13.png" alt="Nike logo">
-      <img src="images/Adidas_logo.png" alt="Addidas logo">
+      <img src="images/nike-shoes-logo-png-13.png" alt="Nike logo" role="presentation">
+      <img src="images/Adidas_logo.png" alt="Addidas logo" role="presentation">
       <img src="images/Puma-Logo.png" alt="puma logo">
-      <img src="images/new-balance-2-logo-png-transparent.png" alt="New Balence logo">
+      <img src="images/new-balance-2-logo-png-transparent.png" alt="New Balence logo" role="presentation">
     </div>
   </section>
 
