--- a/shop.html
+++ b/shop.html
@@ -604,10 +604,10 @@
   <section class="by-brand">
     <div class="brands">
       <h3>Shop By Brand</h3>
-      <img src="images/nike-shoes-logo-png-13.png" alt="nike logo">
-      <img src="images/Adidas_logo.png" alt="Addidas logo">
-      <img src="images/Puma-Logo.png" alt="puma logo">
-      <img src="images/new-balance-2-logo-png-transparent.png" alt="New Balence logo">
+      <img src="images/nike-shoes-logo-png-13.png" alt="nike logo" role="presentation">
+      <img src="images/Adidas_logo.png" alt="Addidas logo" role="presentation">
+      <img src="images/Puma-Logo.png" alt="puma logo" role="presentation">
+      <img src="images/new-balance-2-logo-png-transparent.png" alt="New Balence logo" role="presentation">
     </div>
   </section>
 
