--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
   <!--About AreoStep section-->
   <section class="about-us">
     <h2 id="About-AreoStep">About AreoStep</h2>
-    <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</P>
+    <P>AreoStep is a modern footwear brand dedicated to combining style, comfort and performance. Focused on delivering high-quality sneakers from brands like Nike Addidas, AreoStep provides a seamless shopping experiance for sneakers enthusiasts and casual wearers alike. The brand embodies movement, inovatition and individuality - inspiring customers to take each step with confidence and ease</P>
   </section>
  </main>
 <footer>
